--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-tensorflow==2.13.0
-keras==2.13.1
-fastapi==0.103.2
+tensorflow==2.18.0
+keras==3.8.0
+fastapi[standard]
 uvicorn==0.33.0
 pillow
 numpy
